Use KUrl::toLocalFile instead of urlOrPath which should fix installation on windows.

backport r1159467 
BUG: 241523

svn path=/branches/KDE/4.5/kdelibs/; revision=1159468